// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`CreateAccount renders the page 1`] = `
<Fragment>
  <form
    className="usa-form"
    method="post"
    onSubmit={[Function]}
  >
    <Title>
      Create an employer account
    </Title>
    <Alert
      className="margin-bottom-3"
      neutral={true}
      state="info"
    >
      <Trans
        components={
          Object {
            "create-account-link": <a
              href="/"
            />,
            "p": <p />,
          }
        }
        i18nKey="pages.employersAuthCreateAccount.alertHeading"
      />
    </Alert>
    <Lead>
      Welcome! Please take a few minutes to create an account for your company so you can manage leave for your team. Massachusetts workers can now apply for paid family and medical leave.
    </Lead>
    <Lead>
      If you manage leave for multiple companies, please create an account for one using the form below. You’ll be able to add more companies to your account in the portal.
    </Lead>
    <Details
      label="What you can do with this account"
    >
      <Trans
        components={
          Object {
            "li": <li />,
            "ul": <ul
              className="usa-list"
            />,
          }
        }
        i18nKey="pages.employersAuthCreateAccount.detailsList"
      />
    </Details>
    <InputText
      hint="Use a secure work address. An email address can only be associated with one account."
      label="Email address"
      name="email_address"
      onChange={[Function]}
      smallLabel={true}
      type="email"
      value=""
    />
    <InputPassword
      autoComplete="new-password"
      hint="Your password must be at least 12 characters long and include at least 1 number, 1 symbol, and both uppercase and lowercase letters."
      label="Password"
      name="password"
      onChange={[Function]}
      smallLabel={true}
      value=""
    />
    <InputText
      hint={
        <Trans
          components={
            Object {
              "ein-link": <a
                href="https://www.mass.gov/info-details/finding-your-employers-federal-employer-identification-number-fein"
                rel="noopener"
                target="_blank"
              />,
            }
          }
          i18nKey="pages.employersAuthCreateAccount.einHint"
        />
      }
      inputMode="numeric"
      label="Employer ID number (EIN)"
      mask="fein"
      name="user_leave_administrator.employer_fein"
      onChange={[Function]}
      smallLabel={true}
      value=""
    />
    <p>
      We’ll send you a 6-digit code to verify your email address.
    </p>
    <Button
      loading={false}
      type="submit"
    >
      Create account
    </Button>
  </form>
  <div
    className="border-top-2px border-base-lighter margin-top-4 padding-top-4 text-base-dark text-bold"
  >
    <p>
      <Trans
        components={
          Object {
            "log-in-link": <a
              className="display-inline-block"
              href="/login"
            />,
          }
        }
        i18nKey="pages.employersAuthCreateAccount.haveAnAccount"
      />
    </p>
    <p>
      <Trans
        components={
          Object {
            "create-account-link": <a
              className="display-inline-block"
              href="/create-account"
            />,
          }
        }
        i18nKey="pages.employersAuthCreateAccount.createClaimantAccount"
      />
    </p>
  </div>
</Fragment>
`;

exports[`CreateAccount renders the page 2`] = `
Array [
  "Workers who wish to apply for paid leave should follow ",
  <a
    href="/"
    key="1"
  >
    these instructions
  </a>,
  ".",
]
`;

exports[`CreateAccount renders the page 3`] = `
<ul
  className="usa-list"
  key="0"
>
  <li
    key="0"
  >
    Review paid leave applications from your employees
  </li>
  <li
    key="1"
  >
    Get updates about the program by email
  </li>
  <li
    key="2"
  >
    Download documents and decision letters
  </li>
</ul>
`;

exports[`CreateAccount renders the page 4`] = `
Array [
  "Have an account? ",
  <a
    className="display-inline-block"
    href="/login"
    key="1"
  >
    Log in
  </a>,
]
`;

exports[`CreateAccount renders the page 5`] = `
Array [
  "Need to apply for paid leave? ",
  <a
    className="display-inline-block"
    href="/create-account"
    key="1"
  >
    Create an account
  </a>,
]
`;
